################################################################################
# Copyright (c) 2012 Los Alamos National Security, LLC
# All rights reserved.
################################################################################

#------------------------------------------------------------------------------#
# Scripts
#------------------------------------------------------------------------------#

bin_SCRIPTS = stringify_kernel_files
